--- a/frontend/services.html
+++ b/frontend/services.html
@@ -91,13 +91,96 @@
           <div id="logo">
             <img src="./assets/Images/logo.png" alt="logo" />
           </div>
-          <ul>
+          <ul class="nav_none">
             <li><a href="./index.html">Home</a></li>
             <li><a href="./aboutus.html">About Us</a></li>
             <li class="active"><a href="./services.html">Services</a></li>
             <li class="d-none"><a href="./gallery.html">Gallery</a></li>
             <li><a href="./contact.html">Contact Us</a></li>
           </ul>
+          <div class="main_mmenu">
+            <div id="page">
+              <div class="menu_icn">
+                <button
+                  class="btn btn-primary"
+                  type="button"
+                  data-bs-toggle="offcanvas"
+                  data-bs-target="#offcanvasRight"
+                  aria-controls="offcanvasRight"
+                  style="background-color: #fff; border: #fff"
+                >
+                  <div class="menu-icon">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                  </div>
+                </button>
+
+                <div
+                  class="offcanvas offcanvas-end"
+                  tabindex="-1"
+                  id="offcanvasRight"
+                  aria-labelledby="offcanvasRightLabel"
+                >
+                  <div class="offcanvas-header">
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="offcanvas"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="offcanvas-body">
+                    <div id="logo_res">
+                      <img
+                        src="./assets/Images/logo.png"
+                        style="height: 100px"
+                        alt="logo"
+                      />
+                    </div>
+                    <div class="nav_resp">
+                      <ul>
+                        <li><a href="./index.html">Home</a></li>
+                        <li>
+                          <a href="./aboutus.html">About Us</a>
+                        </li>
+                        <li class="active"><a href="./services.html">Services</a></li>
+                        <li class="d-none">
+                          <a href="./gallery.html">Gallery</a>
+                        </li>
+                        <li><a href="./contact.html">Contact Us</a></li>
+                      </ul>
+                    </div>
+                    <div class="socialMediaIcon_res">
+                      <a href="https://www.facebook.com/" target="_blank"
+                        ><i class="fa-brands fa-facebook fa-lg"></i
+                      ></a>
+                      <a href="https://twitter.com/" target="_blank"
+                        ><i class="fa-brands fa-square-twitter fa-lg"></i
+                      ></a>
+                      <a href="https://www.instagram.com/" target="_blank"
+                        ><i class="fa-brands fa-instagram fa-lg"></i
+                      ></a>
+                      <a href="https://www.linkedin.com/" target="_blank"
+                        ><i class="fa-brands fa-linkedin fa-lg"></i
+                      ></a>
+                    </div>
+                    <div class="nav_right_res">
+                      <a
+                        href="https://api.whatsapp.com/send?phone=03180126925&text=Hello!"
+                        target="_blank"
+                      >
+                        <i class="fa-brands fa-whatsapp"></i> 03180126925</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--menu_icn end here-->
+            </div>
+            <!-- </div> -->
+            <!-- page close -->
+          </div>
         </div>
         <div class="nav_right">
           <a
