--- a/frontend/gallery.html
+++ b/frontend/gallery.html
@@ -203,7 +203,7 @@
       </div>
 
       <div class="formDetail">
-        <form action="http://localhost:5000/contact" method="post" enctype="application/x-www-form-urlencoded">
+        <form action="http://localhost:8000/contact" method="post" enctype="application/x-www-form-urlencoded">
           <div>
             <h4>Contact us</h4>
             <p>
@@ -222,11 +222,11 @@
           </label>
           <label for="phone_number">
             <h5>Phone</h5>
-            <input type="text" id="phone_number" name="phone_number" placeholder="First Name" maxlength="14" required />
+            <input type="text" id="phone_number" name="phone_number" placeholder="Phone Number" maxlength="14" required />
           </label>
           <label for="your_email">
             <h5>Your Email</h5>
-            <input type="text" id="your_email" name="your_email" placeholder="First Name" required />
+            <input type="text" id="your_email" name="your_email" placeholder="Email" required />
           </label>
           <label for="your_message">
             <h5>Your Message</h5>
@@ -316,7 +316,7 @@
           <li><a href="./contact.html">Contact</a></li>
         </ul>
         <p class="copyright">
-          © Copyright 2023 SMK Removals Ltd. All rights reserved. Original and
+          © Copyright 2023 Quick Trip Removals. All rights reserved. Original and
           exclusive content.
         </p>
       </div>
