--- a/frontend/index.html
+++ b/frontend/index.html
@@ -177,7 +177,7 @@
         </div>
         <div class="quoteForm">
           
-          <form  action="http://localhost:5000/quote" method="post" enctype="application/x-www-form-urlencoded">
+          <form  action="http://localhost:8000/quote" method="post" enctype="application/x-www-form-urlencoded">
             <div class="group-form">
               <div class="first">
                 <label for="firstName"> First Name* </label>
@@ -217,9 +217,9 @@
         <div class="rowww">
           <div class="about_us">
             <h2>About Us</h2>
-            <h2>The Best Moving Company In The London - SMK Removals Ltd.</h2>
+            <h2>The Best Moving Company In The London - Quick Trip Removals.</h2>
             <p>
-              <strong>SMK Removals Ltd</strong> stands out as a
+              <strong>Quick Trip Removals</strong> stands out as a
               <strong>dynamic and energetic moving company</strong> dedicated
               to delivering an exceptional level of personalized service. With
               over a decade of experience in the removals and storage sector
@@ -336,8 +336,8 @@
             <li>◉ Fully insured</li>
           </ul>
           <div class="chooseUsBtn">
-            <button>Know More</button>
-            <button>Contact Us</button>
+           <a href="./aboutus.html">Know More</a>
+           <a href="./contact.html">Contact Us</a>
           </div>
         </div>
         <div id="experienceCounter">
@@ -360,7 +360,7 @@
     </div>
 
     <div class="formDetail">
-      <form action="http://localhost:5000/contact" method="post" enctype="application/x-www-form-urlencoded">
+      <form action="http://localhost:8000/contact" method="post" enctype="application/x-www-form-urlencoded">
         <div>
           <h4>Contact us</h4>
           <p>
@@ -379,11 +379,11 @@
         </label>
         <label for="phone_number">
           <h5>Phone</h5>
-          <input type="text" id="phone_number" name="phone_number" placeholder="First Name" maxlength="14" required />
+          <input type="text" id="phone_number" name="phone_number" placeholder="Phone Number" maxlength="14" required />
         </label>
         <label for="your_email">
           <h5>Your Email</h5>
-          <input type="text" id="your_email" name="your_email" placeholder="First Name" required />
+          <input type="text" id="your_email" name="your_email" placeholder="Email" required />
         </label>
         <label for="your_message">
           <h5>Your Message</h5>
@@ -392,10 +392,6 @@
         <button class="btn" type="submit">Let's Continue</button>
       </form>
       <div class="policyTerms">
-        <p>
-          By clicking Send, I agree to House Mover Privacy Policy and Terms of
-          Service.
-        </p>
         <div>
           <div class="socialMedia">
             <a href="https://www.facebook.com/" target="_blank">
@@ -441,7 +437,7 @@
       </div>
     </div>
 
-    <div class="slider">
+    <!-- <div class="slider">
       <div class="owl-carousel owl-theme owwl">
         <div class="item">
           <img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100" />
@@ -480,7 +476,7 @@
           <img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100" />
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="footerNav">
       <ul>
@@ -491,7 +487,7 @@
         <li><a href="./contact.html">Contact</a></li>
       </ul>
       <p class="copyright">
-        © Copyright 2023 SMK Removals Ltd. All rights reserved. Original and
+        © Copyright 2023 Quick Trip Removals. All rights reserved. Original and
         exclusive content.
       </p>
     </div>
