--- a/frontend/services.html
+++ b/frontend/services.html
@@ -323,7 +323,7 @@
       </div>
 
       <div class="formDetail">
-        <form action="http://localhost:5000/contact" method="post" enctype="application/x-www-form-urlencoded">
+        <form action="http://localhost:8000/contact" method="post" enctype="application/x-www-form-urlencoded">
           <div>
             <h4>Contact us</h4>
             <p>
@@ -342,11 +342,11 @@
           </label>
           <label for="phone_number">
             <h5>Phone</h5>
-            <input type="text" id="phone_number" name="phone_number" placeholder="First Name" maxlength="14" required />
+            <input type="text" id="phone_number" name="phone_number" placeholder="Phone Number" maxlength="14" required />
           </label>
           <label for="your_email">
             <h5>Your Email</h5>
-            <input type="text" id="your_email" name="your_email" placeholder="First Name" required />
+            <input type="text" id="your_email" name="your_email" placeholder="Email" required />
           </label>
           <label for="your_message">
             <h5>Your Message</h5>
@@ -355,10 +355,7 @@
           <button class="btn" type="submit">Let's Continue</button>
         </form>
         <div class="policyTerms">
-          <p>
-            By clicking Send, I agree to House Mover Privacy Policy and Terms
-            of Service.
-          </p>
+         
           <div>
             <div class="socialMedia">
               <a href="https://www.facebook.com/" target="_blank"
@@ -410,7 +407,7 @@
         </div>
       </div>
 
-      <div class="slider">
+      <!-- <div class="slider">
         <div class="owl-carousel owl-theme owwl">
           <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
           <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
@@ -425,7 +422,7 @@
           <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
           <div class="item"><img src="./assets/Images/pic1.png" alt="Pics" width="100" height="100"></div>
         </div>
-      </div>
+      </div> -->
 
       <div class="footerNav">
         <ul>
@@ -436,7 +433,7 @@
           <li><a href="./contact.html">Contact</a></li>
         </ul>
         <p class="copyright">
-          © Copyright 2023 SMK Removals Ltd. All rights reserved. Original and
+          © Copyright 2023 Quick Trip Removals. All rights reserved. Original and
           exclusive content.
         </p>
       </div>
